syntax = "proto3";

package speechkit.tts.v3;
import "speechkit/tts/v3/tts.proto";

option go_package = "a.yandex-team.ru/voicetech/asr/cloud_engine/api/speechkit/v3/service/tts;tts";
option java_package = "yandex.cloud.api.ai.tts.v3";

// Service for adaptive synthesis from template with variable parts
service Synthesizer {
    // tts here will change, just for MVP
    rpc UtteranceSynthesis (UtteranceSynthesisRequest) returns (stream UtteranceSynthesisResponse) {
    }
}
